I added a ray class for 3d linear curves, remained PhysicsObject to PhysicsState to be more specific

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,7 +196,7 @@ Set(SOURCE_FILES
 	"Editor/UILayer.h"
 	"Editor/UILayer.cpp"
 
-  )
+   "Core/Physics/Ray.h" "Core/Physics/Ray.cpp" "Core/Physics/PhysicsState.h" "Core/Physics/PhysicsState.cpp")
 
 ## BUILD LUA
 set(LIB_NAME
