--- a/Dependencies/MSDF/CMakeLists.txt
+++ b/Dependencies/MSDF/CMakeLists.txt
@@ -2,9 +2,9 @@
 cmake_minimum_required(VERSION 3.15)
 include(cmake/version.cmake)
 
-option(MSDF_ATLAS_BUILD_STANDALONE "Build the msdf-atlas-gen standalone executable" OFF)
+option(MSDF_ATLAS_BUILD_STANDALONE "Build the msdf-atlas-gen standalone executable" ON)
 option(MSDF_ATLAS_USE_VCPKG "Use vcpkg package manager to link project dependencies" OFF)
-option(MSDF_ATLAS_USE_SKIA "Build with the Skia library" ON)
+option(MSDF_ATLAS_USE_SKIA "Build with the Skia library" OFF)
 option(MSDF_ATLAS_NO_ARTERY_FONT "Disable Artery Font export and do not require its submodule" OFF)
 option(MSDF_ATLAS_MSDFGEN_EXTERNAL "Do not build the msdfgen submodule but find it as an external package" OFF)
 option(MSDF_ATLAS_INSTALL "Generate installation target" OFF)
@@ -204,4 +204,9 @@ if(MSDF_ATLAS_INSTALL)
             "${CMAKE_CURRENT_BINARY_DIR}/msdf-atlas-gen-config-version.cmake"
         DESTINATION ${MSDF_ATLAS_CONFIG_PATH}
     )
+
+    if (CMAKE_VERSION VERSION_GREATER 3.12)
+  set_property(TARGET ${EXEC_NAME} PROPERTY CXX_STANDARD 20)
+endif()
+
 endif()
